# back-propagation-bbque-porting-polimi-2022

./: CMakeLists.txt  README.md
include/: BackpropPorting_exc.h  backprop.h
src/: BackpropPorting_exc.cc  BackpropPorting_main.cc  CMakeLists.txt  backprop.c
